[project]
name = "miso"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]", # Add this line
    "deepgram-sdk>=4.8.1",
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector]~=1.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "prisma>=0.15.0",
    "supabase",
    "python-dotenv>=1.1.1",
    "cerebras-cloud-sdk>=1.50.1",
]

[tool.uv.workspace]
members = [
    "agents/miso",
    "agents/miso-agent",
]
